# mogui

./: .flake8  .hunspell.en.dic  ChangeLog  MANIFEST.in  Makefile  README.md  TODO.md  mogui.logs  mogui.py  mogui.qss  mogui.spec  pyproject.toml  readme
gui/: mocurses.py  mogui.py
lib/: module.py
mogui/: __main__.py  modules.py  qtgui.py  setup_env.py  utils.py
mogui/icons/: README
script/: commit-msg  gitlog2changelog.py  pre-commit
share/: mogui.desktop  mogui.metainfo.xml  setup-env.csh  setup-env.fish  setup-env.sh
share/icons/: README
share/icons/dark/: index.theme
share/icons/light/: index.theme
testbed/: env
testbed/modulefiles/: .common  .compilerwrappers  .nounload  .sameversion
testbed/modulefiles/applications/ghostscript/: 9.04
testbed/modulefiles/applications/imagemagick/: 6.7.4
testbed/modulefiles/applications/kcachegrind/: 0.7.1
testbed/modulefiles/applications/r/: 2.14.1
testbed/modulefiles/compilers/cuda/: .version  4.0  4.1  5.0
testbed/modulefiles/compilers/gnu/: .common  4.5.1  4.8.1
testbed/modulefiles/compilers/hmpp/: .version  2.5.2  3.0.0  3.1.0  3.2.0  3.2.3  3.3.0  3.3.3
testbed/modulefiles/compilers/intel/: .common  11.1.038  12.1.7.256  13.0.0.079  13.1.2.146  14.0.0.080
testbed/modulefiles/environment/: ccc  knc  mic  mic-hybrid  prace
testbed/modulefiles/libraries/boost/: .common  1.45.0  1.47.0
testbed/modulefiles/libraries/fftw2/: 2.1.5
testbed/modulefiles/libraries/fftw3/: .common  3.2.2  3.3.1
testbed/modulefiles/libraries/hdf5/: .common  1.8.5  1.8.8
testbed/modulefiles/libraries/mkl/: .common-11  .common-12  .common-13-mic  .common-14  11.1.038  12.1.7.256  13.0.0.079  13.1.2.146  14.0.0.080
testbed/modulefiles/libraries/netcdf/: .common  3.6.3  4.1.1  4.1.3  4.2  4.2_hdf5
(+66 files in other folders)
